TAG: entrezgeneload-tr11423-BP
DATE: 09/11/2013
STAFF: lec
CHANGES:
1) branch point tag for TR11423 (human disease portal)

TAG: entrezgeneload-5-1-4-1
DATE: 07/23/2013
STAFF: lec
CHANGES: TR11195/TR11317OMIM
1) loadFiles.csh: NCBI/mim2gene_medgen is working/up-to-date

2) human/annotations.py: OMIM query changes (see python for documentation)
TAG: entrezgeneload-5-1-3-1
TAG: entrezgeneload-5-1-2-4
DATE: 04/16/2013
STAFF: sc
CHANGES: N2MO - merge tr6519 branch to trunk

TAG: entrezgeneload-5-1-2-3
TAG: entrezgeneload-5-1-2-2
TAG: entrezgeneload-5-1-2-1
DATE: 02/27/2013
STAFF: lec
CHANGES: TR11195/OMIM
1) loadFiles.csh: NCBI/mim2gene_medgen replaces OMIM/mim2gene
(see mirror_ftp)
2) human/annotations.py: OMIM query changes (see python for documentation)

TAG: entrezgeneload-tr6519-BP
DATE: 02/25/2013
STAFF: dbm
CHANGES: Branch point tag for TR6519

TAG: entrezgeneload-5-1-1-1
DATE: 01/24/2013
STAFF: sc
CHANGES: TR5169/N2MO project
1) commonBuckets-1.csh -  updated regex when querying for swissprot IDs in
     DP_EntrezGene_Accession. Harold said put this change in production

TAG: entrezgeneload-5-0-0-7
TAG: entrezgeneload-5-0-0-6
DATE: 10/15/2012
STAFF: lec
CHANGES: 
1) TR11195/loadFiles.csh
mim2gene => mim2gene.txt is the correct name of the file
radardbschema-5-0-0-3
pgradardbschema-5-0-0-5
do not created mim2gene.txt from downloaded file; the downloaded data file is no good
use the mim2gene.txt file that exists in the input directory

TAG: entrezgeneload-5-0-0-5
DATE: 10/08/2012
STAFF: lec
CHANGES: 
1) TR11195/loadFiles.csh
mim2gene => mim2gene.txt is the correct name of the file

TAG: entrezgeneload-5-0-0-4
DATE: 09/04/2012
STAFF: sc
CHANGES: loadFiles.csh mim2gene is now called mim2gene.txt (since May 20122)
  so mouse egload hasn't loaded new omim since then

TAG: entrezgeneload-5-0-0-3
TAG: entrezgeneload-5-0-0-2
TAG: entrezgeneload-5-0-0-1
DATE: 06/11/2012, 06/14/2012
STAFF: lec
CHANGES: 
1) TR10994/Postgres Cleanup - Exporter